Fix BackLinks svg visibility

--- a/src/components/BackLinks/BackLinks.module.css
+++ b/src/components/BackLinks/BackLinks.module.css
@@ -14,4 +14,5 @@
 
 .back-links svg {
     margin-inline: 10px;
+    stroke: gray;
 }
